some fix text readability in the What's popular block

--- a/css/travel_c_index_1.css
+++ b/css/travel_c_index_1.css
@@ -289,13 +289,11 @@ body {
     max-height: 240px;
 }
 
-
 .reviews .text-muted {
     position: absolute;
     right: 2%;
     bottom: 2%;
 }
-
 
 .up-tours {
     padding: 20px;
@@ -339,21 +337,32 @@ body {
     background-position: 50% 50%;
 }
 
-.cards a {
+.up-tours a {
     text-decoration: none;
     color: #000;
 }
 
 .tour-overlay {
-    padding-top: 0;
-    /*background: rgba(0, 0, 0, 0.45) none repeat scroll 0 0;*/
-    opacity: 0.4;
+    margin: 0;
+    padding: 0;
+    min-height: 240px;
+    /*background: rgba(0, 0, 0, 0.45) none repeat scroll 0 0;
+    color: white;*/
+    opacity: 0;
     width: 100%;
     text-align: center;
+    position: relative;
 }
 
 .tour-overlay:hover {
     opacity: 1;
+}
+
+.tour-them {
+    position: absolute;
+    padding: 0 20px;
+    background: rgba(0, 0, 0, 0.45);
+    color: white;
 }
 
 .tour-button {
@@ -364,12 +373,14 @@ body {
     text-transform: uppercase;
     font-size: 18px;
     font-weight: 100;
-    margin-top: 125px;
+    margin-top: 180px;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 5px;
     padding-top: 5px;
-    /*position: relative;*/
+    /*position: absolute;
+    bottom: 0;
+    right: 35%;*/
     width: 120px;
 }
 
